[mirotalk] - improve/update REST API
