# app/api/swagger.yaml
@@ -43,14 +43,6 @@ paths:
                   description: Custom Join URL.
                   schema:
                       type: object
-                      required:
-                          - room
-                          - name
-                          - audio
-                          - video
-                          - screen
-                          - hide
-                          - notify
                       properties:
                           room:
                               type: string
@@ -60,10 +52,10 @@ paths:
                               default: 'mirotalk'
                           audio:
                               type: boolean
-                              default: true
+                              default: false
                           video:
                               type: boolean
-                              default: true
+                              default: false
                           screen:
                               type: boolean
                               default: false
@@ -72,7 +64,26 @@ paths:
                               default: false
                           notify:
                               type: boolean
-                              default: true
+                              default: false
+                          token:
+                              type: object
+                              description: |
+                                  Object containing authentication token details.
+                                  This token is required when HOST_PROTECTED or HOST_USER_AUTH is enabled in the .env file.
+                                  It includes properties such as username, password, presenter, and expire.
+                              properties:
+                                  username:
+                                      type: string
+                                      default: 'username'
+                                  password:
+                                      type: string
+                                      default: 'password'
+                                  presenter:
+                                      type: boolean
+                                      default: true
+                                  expire:
+                                      type: string
+                                      default: '1h'
             consumes:
                 - 'application/json'
             produces:
